# jakpago

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: deploy.yml
src/: api.rs  app.rs  calculator.rs  character_field.yaml  field.yaml  input.rs  item_field.yaml  main.rs  price_field.yaml  state.rs  strategy.rs  theme.rs
src/assets/data/: equipment.yaml  field.yaml
src/models/: mod.rs  theme.rs  upgrade_context.rs
src/utils/: api.rs  mod.rs  sycamore.rs
src/utils/api/: lib.rs  mod.rs  requests.rs
src/view_models/: mod.rs  theme_view_model.rs  theme_view_model_sycamore.rs  upgrade_context_view_model.rs
src/viewmodels/: mod.rs  theme_viewmodel.rs
src/views/: mod.rs  theme_view.rs  theme_view_sycamore.rs  upgrade_context_view.rs
