[package]
name = "jakpago"
version = "0.1.0"
authors = ["psvm203 <psvm203@proton.me>"]
edition = "2024"
description = "jakpago"
license = "MIT"
repository = "https://github.com/psvm203/jakpago"
keywords = ["game"]
categories = ["wasm"]

[dependencies]
gloo-storage = "0.3.0"
sycamore = "0.9.1"
web-sys = { version = "0.3.77", features = ["HtmlInputElement"] }
