[package]
name = "jakpago"
version = "0.1.0"
authors = ["psvm203 <psvm203@proton.me>"]
edition = "2024"
description = "jakpago"
license = "MIT"
repository = "https://github.com/psvm203/jakpago"
keywords = ["game"]
categories = ["wasm"]

[dependencies]
gloo-net = "0.6.0"
gloo-storage = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_urlencoded = "0.7.1"
sycamore = "0.9.2"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.81", features = ["HtmlInputElement"] }
